add Model: Quest